# ios-gtd

./: .gitignore  README.md  docker-compose.dev.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260319_0001_init_mvp_schema.py  20260319_0002_sync_bridge_fields.py  20260319_0003_sync_bridge_state.py  20260319_0004_sync_delivery_ledger.py  20260320_0005_delivery_identity_bridge.py
backend/app/: main.py  utils_datetime.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: assistant.py  health.py  projects.py  sync.py  tags.py  tasks.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  apple_mapping.py  enums.py  operation_log.py  project.py  sync_bridge_state.py  sync_delivery.py  sync_run.py  tag.py  task.py
backend/app/schemas/: assistant.py  common.py  project.py  sync.py  tag.py  task.py
backend/app/services/: assistant.py  bucket_policy.py
backend/ios_gtd_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: repair_sqlite_sync_schema.py
backend/tests/: conftest.py  test_api.py  test_assistant_parser.py  test_sync_ack_change_id.py  test_sync_delivery_identity.py
docs/: AI_TASK_ENTRY_INTERACTION_CONTRACT_v0.2.0.md  AI_TASK_ENTRY_PLAN.md  ALPHA_CHAT_ASSISTANT_CAPTURE_CHECKLIST.md  API_SPEC.md  BRIDGE_COMPILE_PREP.md  BRIDGE_E2E_MANUAL.md  CHAT_TO_MAC_REMINDERS_SMOKE.md  DEPLOY_TEST_CHECKLIST.md  FEISHU_CAPTURE_MVP.md  NEW_MAC_SETUP.md  PRD.md  QA_SYNC_REPORT.md  ROADMAP.md  (+2 more)
(+29 files in other folders)
